--- a/starter-code/views/index.ejs
+++ b/starter-code/views/index.ejs
@@ -5,7 +5,11 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <br>
+    <br>
+    <a href="/signin" class="btn btn-primary">Log In</a>
+    <br>
+    <br>
+    <a href="/signup" class="btn btn-primary">Sign Up</a>
   </body>
 </html>
