redirect signin for user with session

--- a/starter-code/views/private.ejs
+++ b/starter-code/views/private.ejs
@@ -1,3 +1,4 @@
-<p>Welcome back <b><%= users.usersname %></b></p><br>
-<a href="/users/<%= users._id %>/edit">Edit profile</a> or
+<p>Welcome back <b><%= user.username %></b></p><br>
+<a href="/user/<%= user._id %>/edit">Edit profile</a> or
 <a href="logout">Log out</a>
+
